--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: redstone_web_socket
-version: 0.1.0-beta.1
+version: 0.1.1-beta.1
 description: A web socket plugin for Redstone.dart
 author: Luiz Mineo <luiz.mineo@gmail.com>
 homepage: http://redstonedart.org
@@ -7,7 +7,7 @@ environment:
   sdk: '>=1.9.0-dev.9.1 <2.0.0'
 dependencies:
   redstone: '>=0.6.0-beta.1+1 <0.7.0'
-  shelf_web_socket: ">=0.0.1 < 0.1.0"
+  shelf_web_socket: "^0.2.0"
   di: ">=3.3.1 <4.0.0"
 dev_dependencies:
   unittest: '>=0.11.0+3 <0.12.0'
