--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   redstone: '>=0.6.0-beta.1+1 <0.7.0'
   shelf_web_socket: "^0.2.0"
+  web_socket_channel: "^1.0.4"
   di: ">=3.3.1 <4.0.0"
 dev_dependencies:
   unittest: '>=0.11.0+3 <0.12.0'
